CHANGES
*******

0.11 (unreleased)
=================

- The second argument for ``match_key`` is now optional; if you
  don't supply it ``match_key`` will generate a predicate function
  that extracts that name by default.


0.10 (2016-10-04)
=================

- **Breaking change**

  Reg has undergone another API breaking change. The goals of this
  change were:

  * Make everything explicit.

  * A simpler implementation structure -- dispatch functions maintain
    their own registries, which allows for less interacting objects.

  * Make the advanced context-dependent dispatch more Pythonic by
    using classes with special dispatch methods.

  Detailed changes:

  * ``reg.Registry`` is gone. Instead you register directly on the
    dispatch function::

      @reg.dispatch('a')
      def foo(a):
        ...

      def foo_implementation(a):
        ...

      foo.register(foo_implementation, a=Document)

  * Caching is now per dispatch function, not globally per lookup. You
    can pass a ``get_key_lookup`` function that wraps
    ``reg.PredicateRegistry`` instance inside a
    ``reg.DictCachingKeyLookup`` cache. You can also use a
    ``reg.LruCachingKeyLookup`` if you expect a dispatch to be called
    with a large amount of possible predicate combinations, to
    preserve memory.

  * The whole concept of a "lookup" is gone:

    * ``reg.implicit`` is gone: everything is explicit. There is no more
      implicit lookup.

    * ``reg.Lookup`` itself is gone -- its now implemented directly in the
      dispatch object, but was already how you accessed it.

    * The special ``lookup`` argument to pass through the current
      ``Lookup`` is gone. If you need context-dependent dispatch, you
      use dispatch methods.

    * If you need context dependent dispatch, where the functions
      being dispatched to depend on application context (such as
      Morepath's application mounting), you use