@@ -6,6 +6,5 @@ from .arginfo import arginfo
 from .sentinel import Sentinel, NOT_FOUND
 from .error import RegistrationError
 from .predicate import (Predicate, PredicateRegistry, KeyIndex, ClassIndex,
-                        key_predicate, class_predicate,
                         match_key, match_instance, match_class)
 from .cache import DictCachingKeyLookup, LruCachingKeyLookup
