@@ -4,6 +4,17 @@ CHANGES
 0.11 (unreleased)
 =================
 
+- **Breaking change**
+
+  Remove the ``key_predicate`` function.  You can now use
+  ``Predicate(..., index=KeyIndex)`` or ``match_key`` instead.
+
+- **Breaking change**
+
+  Remove the ``class_predicate`` function.  You can now use
+  ``Predicate(..., index=ClassIndex)``, ``match_instance`` or
+  ``match_class`` instead.
+
 - The second argument for ``match_key`` is now optional; if you
   don't supply it ``match_key`` will generate a predicate function
   that extracts that name by default.
